--- a/styles/styles.css
+++ b/styles/styles.css
@@ -594,3 +594,11 @@ img {
   align-items: center;
   column-gap: 1rem;
 }
+
+/* Services section */
+.services__container {
+  grid-template-columns: 250px;
+  justify-content: 250px;
+  row-gap: 2rem;
+  padding-top: 1rem;
+}
