--- a/styles/styles.css
+++ b/styles/styles.css
@@ -309,6 +309,15 @@ img {
   box-shadow: 0 1px 16px hsla(0, 0%, 0%, .12);
 }
 
+/* Active link */
+.active-link {
+  color: var(--white-color);
+}
+
+.active-link::after {
+  width: 25%;
+}
+
 /* HOME */
 .home__container {
   padding: 2rem;
@@ -937,3 +946,93 @@ img {
 .contact__social-link:hover {
   background-color: var(--first-color);
 }
+
+.contact__message {
+  color: var(--white-color);
+  font-size: var(--small-font-size);
+  position: absolute;
+  bottom: -1.6rem;
+  left: 0;
+}
+
+.footer {
+  background-color: var(--black-color);
+}
+
+.footer__container {
+  padding-block: 3rem 2rem;
+  row-gap: 2.5rem;
+}
+
+.footer__links {
+  display: flex;
+  justify-content: center;
+  column-gap: 2rem;
+}
+
+.footer__link {
+  color: var(--white-color);
+  transition: color .4s;
+}
+
+.footer__link:hover {
+  color: var(--text-color-light);
+}
+
+.footer__copy {
+  color: var(--text-color-light);
+  font-size: var(--small-font-size);
+  text-align: center;
+}
+
+.footer__copy a {
+  color: var(--white-color);
+  font-weight: var(--font-medium);
+}
+
+/* SCROLL BAR */
+::-webkit-scrollbar {
+  width: .6rem;
+  border-radius: .5rem;
+  background-color: hsl(0, 0%, 65%);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: .5rem;
+  background-color: hsl(0, 0%, 55%);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--first-color)
+
+}
+
+/* SCROLL UP */
+.scrollup {
+  position: fixed;
+  right: 1rem;
+  bottom: -50%;
+  background-color: var(--black-color);
+  display: inline-flex;
+  padding: 8px;
+  font-size: 1.25rem;
+  color: var(--white-color);
+  z-index: var(--z-tooltip);
+  transition: bottom .4s, transform .4s, background-color .4s;
+}
+
+.scrollup:hover {
+  transform: translateY(-.5rem);
+}
+
+.show-scroll {
+  bottom: 3rem;
+}
+
+
+
+/* FOR SMALL DEVICES */
+
+/* FOR MEDIUM DEVICES */
+
+/* FOR LARGE DEVICES */
